# self-driving-lab-for-coacervate-property-optimization

./: LICENSE  README.md  environment.yaml  pyproject.toml
coacervopti/: acquisition.py  experiment.py  format.py  hyperparams.py  mlmodel.py  sampling.py  utils.py
datasets/: coacervate_mean_diameter_maternw_TEST.csv  coacervate_number_of_particles_maternw_TEST.csv  hartmann3d_lhs_noise10.csv
insilico_al/test_coacervate_optimization_maternw_number_of_particles/cycle_0/: cycle_0_log.json  cycle_0_output_sampled.csv
insilico_al/test_coacervate_optimization_maternw_number_of_particles/cycle_1/: X_train_cycle_1.csv  cycle_1_landscapes.csv  cycle_1_log.json  cycle_1_output_sampled.csv  cycle_1_predictions.csv  cycle_1_validated.csv  model_snapshot_cycle_1_joblib.pkl
insilico_al/test_coacervate_optimization_maternw_number_of_particles/cycle_2/: X_train_cycle_2.csv  cycle_2_landscapes.csv  cycle_2_log.json  cycle_2_output_sampled.csv  cycle_2_predictions.csv  cycle_2_validated.csv  model_snapshot_cycle_2_joblib.pkl
insilico_al/test_coacervate_optimization_maternw_number_of_particles/cycle_3/: X_train_cycle_3.csv  cycle_3_landscapes.csv  cycle_3_log.json  cycle_3_output_sampled.csv  cycle_3_predictions.csv  cycle_3_validated.csv  model_snapshot_cycle_3_joblib.pkl
insilico_al/test_coacervate_optimization_maternw_number_of_particles/dataset/: scaler.joblib  test_coacervate_optimization_maternw_number_of_particles_CANDIDATES.csv  (+2 more)
script/: insilico_lab_al_simulation.py  insilico_lab_al_simulation_config.yaml
