[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coacervopti"
version = "0.1.0"
description = "Self-Driving Laboratory for Multicomponent Coacervate Property Optimization"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Andrea Gardin"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=5.4",
    "joblib>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/molML/self-driving-lab-for-coacervate-property-optimization"
Repository = "https://github.com/molML/self-driving-lab-for-coacervate-property-optimization"

[tool.setuptools]
packages = ["coacervopti"]

[tool.setuptools.package-data]
coacervopti = ["*.yaml"]

[tool.black]
line-length = 100
target-version = ['py38']
